add bio, footer, and mobile width

--- a/index.html
+++ b/index.html
@@ -4,11 +4,23 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" type="text/css" href="index.css" />
-    <title>Rob Shipley</title>
+    <title>Robert Shipley</title>
   </head>
   <body>
     <div class="main">
-      <div class="title">Robert Shipley</div>
+      <div class="header">
+        <div class="title">Robert Shipley</div>
+        <div class="subtle">Software Developer</div>
+      </div>
+      <div class="bio section">
+        I am a creative software developer looking to make a positive impact on
+        the world through technology. I enjoy engineering performant solutions
+        which are readily deployed in accessible formats for all possible users.
+        Exploring modern technologies and how they can solve real world problems
+        is my personal goal. I am always looking for a challenging, fast paced,
+        and exciting environment to drive my self development and career
+        achievements.
+      </div>
       <div class="board">
         <div class="section">
           <div class="subtitle">Client Work</div>
@@ -33,6 +45,9 @@
             </li>
           </ul>
         </div>
+      </div>
+      <div class="footer">
+        <a href="https://uk.linkedin.com/in/robert-shipley">LinkedIn</a>
       </div>
     </div>
   </body>
