style and bio update

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <div class="bio section">
         I am a creative software developer looking to make a positive impact on
         the world through technology. I enjoy engineering performant solutions
-        which are readily deployed in accessible formats for all possible users.
+        and managing deployment pipelines to deliver products to users.
         Exploring modern technologies and how they can solve real world problems
         is my personal goal. I am always looking for a challenging, fast paced,
         and exciting environment to drive my self development and career
