--- a/index.html
+++ b/index.html
@@ -45,10 +45,19 @@
             </li>
           </ul>
         </div>
+        <div class="section">
+          <div class="subtitle">Find Me</div>
+          <ul>
+            <li>
+              <a href="https://uk.linkedin.com/in/robert-shipley">Linkedin</a>
+            </li>
+            <li>
+              <a href="https://github.com/rs96">GitHub</a>
+            </li>
+          </ul>
+        </div>
       </div>
-      <div class="footer">
-        <a href="https://uk.linkedin.com/in/robert-shipley">LinkedIn</a>
-      </div>
+      <div class="footer"></div>
     </div>
   </body>
 </html>
