add webgl-demo link

--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
             <li>
               <a href="https://rs96.github.io/training">Training Diary</a>
             </li>
+            <li>
+              <a href="https://rs96.github.io/webgl-demo">WebGL Demo</a>
+            </li>
           </ul>
         </div>
         <div class="section">
