--- a/index.html
+++ b/index.html
@@ -23,15 +23,12 @@
       </div>
       <div class="board">
         <div class="section">
-          <div class="subtitle">Client Work</div>
+          <div class="subtitle">Professional Work</div>
           <ul>
-            <li>
-              <a href="https://www.home.saxo/en-gb/platforms/saxotradergo"
-                >Saxo Trader GO</a
-              >
-            </li>
-            <li>Goldman Sachs <i>BoltWeb</i> (internal)</li>
-            <li>Axpo <i>Trader Cockpit</i> (internal)</li>
+            <li>Heatly</li>
+            <li>Axpo</li>
+            <li>Goldman Sachs</li>
+            <li>Saxo Bank</li>
           </ul>
         </div>
         <div class="section">
